# restitch

./: .gitignore  README.md  config.example.yaml  package.json
.github/workflows/: deploy.yml
compositor/: .gitignore  CMakeLists.txt  README.md
compositor/src/: cuda_composite.cu  cuda_composite.h  main.cpp
containers/restitch/: .dockerignore  Dockerfile  entrypoint.sh
containers/restitch/patches/: vf_overlay_cuda_frame_dims.patch
plans/: composite-substream-startup-stall.md  custom-compositor.md  tmp-bench-compositor.sh  tmp-bench-throughput.sh  tmp-clock-detector.js  tmp-rewind-detector2.js
scripts/: deploy.sh  install-ffmpeg-nvenc.sh  install-whisper.sh  restitch-transcribe.service  restitch.service  test-filter.ts  test-nvenc-corruption.sh  test-vstack-sync.sh
servers/lib/: setup-docker.sh  setup-nvidia-container.sh
servers/sentinel/: README.md  build.sh  deploy.sh  docker-compose.yml  versions.json
src/: config.ts  dashboard.ts  ffmpeg.ts  hwaccel.ts  index.ts  mediamtx.ts  probe.ts  process.ts  transcribe.ts  watchdog.ts
